[package]
name = "multi-hop-locks"
version = "0.1.0"
authors = [
    "Omer <omer.shlomovits@gmail.com>"
]


homepage = "https://github.com/KZen-networks/multi-hop-locks"
repository = "https://github.com/KZen-networks/multi-hop-locks"
license = "GPL-3.0-or-later"
categories = ["cryptography"]

[lib]
crate-type = ["lib"]

[dependencies]
paillier = { git = "https://github.com/KZen-networks/rust-paillier", tag="v0.3.3"}
zk-paillier = { git = "https://github.com/KZen-networks/zk-paillier", tag="v0.2.4"}


hex = "0.3.2"
subtle = {version = "2", features = ["nightly"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
itertools = "0.7.8"

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
tag = "v0.2.2"
features =  ["ec_secp256k1"]

[dependencies.multi-party-ecdsa]
git = "https://github.com/KZen-networks/multi-party-ecdsa"
tag = "v0.2.5"

[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }
